<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/settings_title"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/server_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:text="@string/server_name"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/server_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/server_name_label"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/server_name_label" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttons"
            android:layout_below="@+id/server_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/logs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttons2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/try_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/separator1"
                android:text="@string/try_on"
                android:textAllCaps="false" />

            <View
                android:id="@+id/separator1"
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/try_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/separator1"
                android:text="@string/try_off"
                android:textAllCaps="false" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/separator2"
                android:text="@string/clear_logs"
                android:textAllCaps="false" />

            <View
                android:id="@+id/separator2"
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/separator2"
                android:text="@string/close"
                android:textAllCaps="false" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>